# claude-setup

./: .gitignore  LICENSE  QUICK_START.md  README.md  SUMMARY.md  claude_manager.py  config.yaml  pyproject.toml  run.sh  test_minimal.py  test_tui.py  verify_fix.py
agents/: code-reviewer.md  deployment-helper.md  security-scanner.md  test-runner.md
commands/: database.md  deployment.md  git-workflow.md  testing.md
documentation/: CUSTOMIZATION.md  INSTALLATION.md  USAGE.md
logs/: status_line.json
mcp-servers/context7/: config.json
mcp-servers/github/: config.json
mcp-servers/logs/: status_line.json
mcp-servers/neo4j-aura/: config.json
mcp-servers/playwright/: config.json
mcp-servers/sequential-thinking/: config.json
output-styles/: concise.md  debug.md  minimal.md  verbose.md
